# jax-chacha-prng

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ChangeLog.txt  ChangeLog.txt.license  MANIFEST.in  MANIFEST.in.license  README.md  README.md.license  chacha.py  chacha_test_interface.py  cuda_setup.sh  environment.yml  environment.yml.license  jax_test_interface.py  pyproject.toml  pyproject.toml.license  setup.py
.github/workflows/: build_wheels.yml  build_wheels_and_publish.yml  build_wheels_for_pypi.yml  jax_compatibility_tests.yml  native_code_tests.yml  python_unittests.yml  testu01_small_crush.yml
.reuse/: dep5
arm_container/: Dockerfile  docker_main.sh
chacha/: __init__.py  chacha.py  cipher.py  defs.py  jax_ops.py  native.pyi  random.py  version.py
cmake_config/: neon_test.cpp  sse_test.cpp
lib/: chacha_kernels.hpp  cpu_kernel.cpp  cpu_kernel.hpp  cpu_kernel_arm.cpp  cpu_kernel_arm.hpp  cpu_kernel_x86_64.cpp  cpu_kernel_x86_64.hpp  defs.hpp  gpu_kernel.cpp.cu  gpu_kernel.cpp.hip  gpu_kernel.gpu.cpp  gpu_kernel.hpp  python_bindings.cpp
lib/arm/: cpu_kernel_arch.hpp
lib/generic/: cpu_kernel_arch.hpp
lib/intel/: cpu_kernel_arch.hpp
rng_testsuite/: CMakeLists.txt  c_chacha_main.cpp  chacha_test_interface.py  jax_test_interface.py  main.cpp  python_rng.cpp  python_rng.hpp  python_wrapper.cpp  python_wrapper.hpp  rng_test_result_parser.py  testu01_wrapper.cpp  testu01_wrapper.hpp
rng_testsuite/chacha_reference/: .gitignore  README.md  README.md.license  chacha.c  chacharng.cpp  chacharng.hpp  download_estream_headers.sh  ecrypt-sync.h
rng_testsuite/cmake/: FindTestU01.cmake
tests/: cipher_test.py  random_test.py  testconfig.py  tests.py
tests/lib/: cpu_kernel_tests.cpp  gpu_kernel_tests.cpp.cu  gpu_kernel_tests.cpp.hip  gpu_kernel_tests.gpu.cpp  tests.hpp
timing/: plot.py  timing_comparison.py
